feat: Correction 3.ii avec author.id utilisé
